# product-search

./: .pre-commit-config.yaml  pyproject.toml
src/: main.py
src/schemas/: schemas.py
