[tool.poetry]
name = "product-search"
version = "0.1.0"
description = ""
authors = ["hassanxelamin <hello@hassanelamin.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
openai = "^1.38.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
mypy = "^1.11.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
